[package]
name = "phala_nft_collection"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.4.0" }

pink-extension = { version = "0.4", default-features = false }
phat_js = { version = "0.1", default-features = false }

hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
ink_e2e = "4.2.0"
pink-extension-runtime = "0.4"

[lib]
name = "phala_nft_collection"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "serde-json-core/std",
    "pink-extension/std",
    "phat_js/std",
]
ink-as-dependency = []
e2e-tests = []
